<resources>
    <string name="app_name">ConnectMe</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">REGISTRATION</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No.</string>
    <string name="register">REGISTER</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_your_pet">ADD YOUR PET</string>
    <string name="enter_pet_name">Enter Pet Name</string>
    <string name="enter_breed_name">Enter Breed Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="description">Description</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    // string array for the spinner of quantity
    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
</resources>