<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".users.Registration">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/input"
            android:hint="@string/first_name"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:hint="@string/last_name"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFirstName" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLastName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />

        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/input"
            android:hint="@string/address"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhoneNum" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/register_btn"
            android:text="@string/register"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>