<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wallet_holo_blue_light"
    tools:context=".pets.AddPetActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_your_pet"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAddPet"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_add_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView"
            app:tint="@color/white" />

        <EditText

            android:id="@+id/etPetName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints="name"
            android:background="@drawable/input"
            android:hint="@string/enter_pet_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAddPet" />

        <EditText
            android:id="@+id/etBreedName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:background="@drawable/input"
            android:hint="@string/enter_breed_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPetName"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBreedName" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:hint="@string/enter_weight"
            android:inputType="numberDecimal"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPrice" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescriptioin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/register_btn"
            android:text="@string/add_pet"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>