<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_draw"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="Username"
        android:paddingLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        />
    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="Password"
        android:paddingLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/forgotPassword"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:background="@drawable/login_btn"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/signUp"
            android:text="@string/sign_up"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>